# Herolapse-studio

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  logic.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
tabs/: __init__.py  hero_select.py  quick_timelapse.py  sequence_builder.py  time_stamper.py
